:construction: working on geopoint feature
TODO next GetGeoPoint
